# CoSpace

./: .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  smoke_test_new.py
backend/app/: main.py
backend/app/api/: auth.py  materials.py  projects.py
backend/app/core/: config.py  db.py  deps.py  security.py  storage.py
backend/app/models/: __init__.py  material.py  project.py  user.py
backend/app/schemas/: material.py  project.py
backend/app/services/: authoring.py  chat.py  embedding.py  generator.py  indexer.py  llm.py  parser.py  structure.py
my-app/: package-lock.json  package.json  proxy.ts
my-app/app/: globals.css  layout.tsx
my-app/app/components/: ConfirmModal.tsx  FolderModal.tsx  NavBar.tsx  RenameModal.tsx
my-app/app/login/: page.tsx
my-app/app/materials/: page.tsx
my-app/app/workspace/: page.tsx
my-app/app/workspace/[projectId]/: page.tsx
new/: prd.md
