[project]
name = "cospace-backend"
version = "0.1.0"
description = "AI 文档生成 MVP（精简可跑版：SQLite + 进程内任务 + 本地存储）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "pydantic[email]>=2.0",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "numpy>=1.26",
    "openai>=1.0",
]

[project.optional-dependencies]
# 真实语义向量（不装则自动降级为本地哈希向量）
embeddings = ["sentence-transformers>=3.0"]
# 改用 PostgreSQL 时
postgres = ["asyncpg>=0.29"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
